--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href= 'https://63cfaa37b51943d8bbc5062fc61ede57.cc-propeller.cloud/#'></a></p>
+    <p><a href= 'https://63cfaa37b51943d8bbc5062fc61ede57.cc-propeller.cloud/#'>Download Excursion (Coming soon!)</a></p>
+    <video autoplay loop>
+        <source src= "resources/videos/excursion.mp4" type="video/mp4">
+    </video>
+
+    <h2>Your personal travel guide</h2>
+
+    <h5>Excursion rememberes places you like, and recommends new points of interest around you.</h5>
+
+    <img src="resources/images/camp.webp"/>
+
+    <p><img src="resources/images/phone.webp" /></p>
+
+    <h1>Coming soon for iPhone and Android</h1>
+
+    <p><a href= 'https://63cfaa37b51943d8bbc5062fc61ede57.cc-propeller.cloud/#'>Download Excursion (Coming soon!)</a></p>
+
+    <h3>© Excursion</h3>
 </body>
 </html>
